# monochat

./: Cargo.toml  pom.xml
.cargo/: config.toml
.github/workflows/: cross-platform.yml
src/: ffi.rs  lib.rs
src/main/java/dev/aperso/monochat/: Example.java  Message.java  MessageStream.java  MonoChat.java
src/source/: chzzk.rs  mod.rs  soop.rs
