[package]
name = "monochat"
version = "0.1.0"
edition = "2024"

[lib]
name = "monochat"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
tracing = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.47", features = ["full"] }
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
jni = "0.21"
